--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+:root {
+  --color-black: #000000;
+  --color-dark-gray: #1a1a1a;
+  --color-white: #ffffff;
+  --color-deep-purple: #5f3fff;
+  --color-light-purple: #a293ff;
+  --color-pink: #dabfff;
+}
