fix: 폰트 적용 안되는 오류 해결

--- a/src/index.css
+++ b/src/index.css
@@ -49,3 +49,18 @@ body {
   padding: 0 40px;
   width: 100%;
 }
+.poor-story {
+  font-family: "Poor Story", serif;
+}
+
+.hi-melody {
+  font-family: "Hi Melody", sans-serif;
+}
+
+.gaegu {
+  font-family: "Gaegu", sans-serif;
+}
+
+.dongle {
+  font-family: "Dongle", sans-serif;
+}
