refactor: 최종 수정 완료

--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,7 @@ body {
 }
 
 .purple-gradient {
-  background: linear-gradient(180deg, #867cdd 0%, #eec8ff 100%);
+  background: linear-gradient(180deg, #867cdd 0%, #6157b6 100%);
 }
 .scrollbar-none {
   scrollbar-width: none;
